--- a/Web.Statu/Views/ApiV1/UX.cshtml
+++ b/Web.Statu/Views/ApiV1/UX.cshtml
@@ -266,7 +266,56 @@
             </div>
         </div>
 
+        <h3>Horizontal tabs</h3>
+        <pre></pre>
+        <h4>Default</h4>
+        <div>
 
+            <!-- Nav tabs -->
+            <ul class="nav nav-tabs" role="tablist">
+                <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Home</a></li>
+                <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Profile</a></li>
+                <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Messages</a></li>
+                <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Settings</a></li>
+            </ul>
+
+            <!-- Tab panes -->
+            <div class="tab-content">
+                <div role="tabpanel" class="tab-pane active" id="home"><h2>HOME</h2><p>Content</p></div>
+                <div role="tabpanel" class="tab-pane" id="profile"><h2>Profile</h2><p>Content</p></div>
+                <div role="tabpanel" class="tab-pane" id="messages"><h2>MESSAGES</h2><p>Content</p></div>
+                <div role="tabpanel" class="tab-pane" id="settings"><h2>SETTINGS</h2><p>Content</p></div>
+            </div>
+
+        </div>
+
+        <style>
+        </style>
+        <h4>with borders</h4>
+        <pre>
+&lt;ul class="nav nav-tabs border" role="tablist"&gt;
+</pre>
+
+        <div>
+            <!-- Nav tabs -->
+            <ul class="nav nav-tabs border" role="tablist">
+                <li role="presentation" class="active"><a href="#home1" aria-controls="home" role="tab" data-toggle="tab">Home</a></li>
+                <li role="presentation"><a href="#profile1" aria-controls="profile" role="tab" data-toggle="tab">Profile</a></li>
+                <li role="presentation"><a href="#messages1" aria-controls="messages" role="tab" data-toggle="tab">Messages</a></li>
+                <li role="presentation"><a href="#settings1" aria-controls="settings" role="tab" data-toggle="tab">Settings</a></li>
+            </ul>
+
+            <!-- Tab panes -->
+            <div class="tab-content">
+                <div role="tabpanel" class="tab-pane active" id="home1"><h2>HOME</h2><p>Content</p></div>
+                <div role="tabpanel" class="tab-pane" id="profile1"><h2>Profile</h2><p>Content</p></div>
+                <div role="tabpanel" class="tab-pane" id="messages1"><h2>MESSAGES</h2><p>Content</p></div>
+                <div role="tabpanel" class="tab-pane" id="settings1"><h2>SETTINGS</h2><p>Content</p></div>
+            </div>
+
+        </div>
+
+        <hr />
         <h3>profil osob</h3>
         <h4>Vetsi</h4>
         <div class="person-profile-thumb">
