--- a/Web.Statu/Views/Home/OsobaProfil_Vazby.cshtml
+++ b/Web.Statu/Views/Home/OsobaProfil_Vazby.cshtml
@@ -20,7 +20,7 @@
 
 
 <div class="container">
-    <div class="shadowbox">
+    <div class="row shadowbox">
         <h3>Podrobný výpis angažovanosti osoby v soukromých firmách</h3>
         <p style="padding-bottom:15px;">
             <a class="btn btn-primary btn-sm" role="button" href="@Url.Action("PolitikVazby", new { id = Model.NameId })">Přehledný výpis vazeb osoby a firem navzájem</a>
